--- a/Ottawa/Base.lproj/Main.storyboard
+++ b/Ottawa/Base.lproj/Main.storyboard
@@ -219,45 +219,29 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SJN-jG-WIC" userLabel="PhotoStack">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cT8-FW-lyb" userLabel="TopStack">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="cT8-FW-lyb" userLabel="TopStack">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Royal_Canadian_Mint_Ottawa" translatesAutoresizingMaskIntoConstraints="NO" id="YdP-YD-op2">
                                                 <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
-                                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="0.0" y="0.0" width="400" height="279"/>
-                                                </variation>
                                             </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="500" verticalHuggingPriority="500" horizontalCompressionResistancePriority="500" verticalCompressionResistancePriority="500" image="RememberanceDay2015" translatesAutoresizingMaskIntoConstraints="NO" id="Zzy-HP-9kr">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RememberanceDay2015" translatesAutoresizingMaskIntoConstraints="NO" id="Zzy-HP-9kr">
                                                 <rect key="frame" x="300" y="0.0" width="300" height="300"/>
-                                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="0.0" y="279" width="400" height="280"/>
-                                                </variation>
                                             </imageView>
                                         </subviews>
-                                        <variation key="heightClass=regular-widthClass=compact" axis="vertical" distribution="fillEqually" misplaced="YES">
-                                            <rect key="frame" x="0.0" y="0.0" width="400" height="559"/>
-                                        </variation>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MxD-k5-BRP" userLabel="BottomStack">
                                         <rect key="frame" x="0.0" y="300" width="600" height="300"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Winterlude" translatesAutoresizingMaskIntoConstraints="NO" id="cyX-qw-366">
                                                 <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
-                                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="0.0" y="0.0" width="400" height="241"/>
-                                                </variation>
                                             </imageView>
                                         </subviews>
-                                        <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="0.0" y="559" width="400" height="241"/>
-                                        </variation>
                                     </stackView>
                                 </subviews>
-                                <variation key="heightClass=regular-widthClass=compact" distribution="fillProportionally"/>
                             </stackView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mVt-fk-CnB" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
-                                <rect key="frame" x="20" y="5" width="72" height="36"/>
+                                <rect key="frame" x="20" y="259" width="72" height="36"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                 <state key="normal" title=" Sights ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -265,8 +249,9 @@
                                 <variation key="heightClass=compact">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                    <rect key="frame" x="20" y="20" width="50" height="29"/>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=regular">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
@@ -276,37 +261,21 @@
                                     <segue destination="8li-6Y-Fd5" kind="show" identifier="goSights" id="g8Y-OI-Ker"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4o-Ip-pJO" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
-                                <rect key="frame" x="409" y="259" width="171" height="36"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
-                                <state key="normal" title=" Culture &amp; Events ">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="heightClass=compact">
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
-                                    <rect key="frame" x="566" y="338" width="213" height="42"/>
-                                </variation>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zWQ-zm-cd5" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
-                                <rect key="frame" x="465" y="510" width="115" height="36"/>
+                                <rect key="frame" x="465" y="504" width="115" height="36"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                 <state key="normal" title=" Winterlude ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <variation key="heightClass=compact" misplaced="YES">
+                                <variation key="heightClass=compact" ambiguous="YES" misplaced="YES">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                     <rect key="frame" x="457" y="307" width="115" height="36"/>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                    <rect key="frame" x="300" y="717" width="80" height="29"/>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                <variation key="heightClass=regular-widthClass=regular" ambiguous="YES" misplaced="YES">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                     <rect key="frame" x="636" y="701" width="143" height="42"/>
                                 </variation>
@@ -321,27 +290,58 @@
                                     <constraint firstAttribute="width" secondItem="Adk-Fl-zRi" secondAttribute="height" multiplier="55:58" id="Dxu-UC-bMf"/>
                                 </constraints>
                                 <state key="normal" image="Ottawa2017"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="666" width="76" height="80"/>
+                                </variation>
+                            </button>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4o-Ip-pJO" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
+                                <rect key="frame" x="409" y="259" width="171" height="36"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title=" Culture &amp; Events ">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="heightClass=compact">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                    <rect key="frame" x="5" y="447" width="246" height="29"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                                    <rect key="frame" x="566" y="338" width="213" height="42"/>
+                                </variation>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="h2o-4P-AFC" firstAttribute="top" secondItem="zWQ-zm-cd5" secondAttribute="bottom" constant="5" id="33c-fZ-x2V"/>
                             <constraint firstItem="h2o-4P-AFC" firstAttribute="top" secondItem="Adk-Fl-zRi" secondAttribute="bottom" constant="5" id="9IV-i8-50O"/>
                             <constraint firstItem="Adk-Fl-zRi" firstAttribute="leading" secondItem="gDY-ac-TY3" secondAttribute="leadingMargin" id="GRN-Kf-O58"/>
                             <constraint firstItem="SJN-jG-WIC" firstAttribute="leading" secondItem="gDY-ac-TY3" secondAttribute="leading" id="GZu-xA-e7k"/>
+                            <constraint firstItem="mVt-fk-CnB" firstAttribute="bottom" secondItem="M4o-Ip-pJO" secondAttribute="bottom" id="IBi-KG-3O0"/>
                             <constraint firstItem="M4o-Ip-pJO" firstAttribute="bottom" secondItem="cT8-FW-lyb" secondAttribute="bottom" constant="-5" id="S3o-7g-HY8"/>
+                            <constraint firstItem="zWQ-zm-cd5" firstAttribute="bottom" secondItem="MxD-k5-BRP" secondAttribute="bottomMargin" constant="-60" id="T24-vn-fAy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="zWQ-zm-cd5" secondAttribute="trailing" id="TBy-Pi-3zM"/>
                             <constraint firstItem="Adk-Fl-zRi" firstAttribute="height" secondItem="MxD-k5-BRP" secondAttribute="height" multiplier="0.3" id="U2k-35-4pp"/>
-                            <constraint firstItem="mVt-fk-CnB" firstAttribute="top" secondItem="gDY-ac-TY3" secondAttribute="topMargin" constant="5" id="ZMN-c4-UoS">
-                                <variation key="heightClass=regular-widthClass=compact" constant="10"/>
-                                <variation key="heightClass=regular-widthClass=regular" constant="15"/>
-                            </constraint>
                             <constraint firstItem="mVt-fk-CnB" firstAttribute="leading" secondItem="gDY-ac-TY3" secondAttribute="leadingMargin" id="Zla-Un-Re3"/>
                             <constraint firstItem="SJN-jG-WIC" firstAttribute="width" secondItem="gDY-ac-TY3" secondAttribute="width" id="dok-4O-qDK"/>
                             <constraint firstItem="SJN-jG-WIC" firstAttribute="top" secondItem="gDY-ac-TY3" secondAttribute="top" id="heb-Hm-8uB"/>
                             <constraint firstAttribute="trailingMargin" secondItem="M4o-Ip-pJO" secondAttribute="trailing" id="w0c-7Q-prY"/>
                             <constraint firstItem="SJN-jG-WIC" firstAttribute="height" secondItem="gDY-ac-TY3" secondAttribute="height" id="w6U-iu-J5h"/>
                         </constraints>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="SJN-jG-WIC"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="GZu-xA-e7k"/>
+                                <include reference="dok-4O-qDK"/>
+                                <include reference="heb-Hm-8uB"/>
+                                <include reference="w6U-iu-J5h"/>
+                                <include reference="U2k-35-4pp"/>
+                                <include reference="S3o-7g-HY8"/>
+                            </mask>
+                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Screenshot-30" id="wKx-oe-o1f" userLabel="Attractions"/>
                     <navigationItem key="navigationItem" id="6kN-lQ-Kdp"/>
@@ -354,7 +354,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Dp-iK-DFd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1778" y="724"/>
+            <point key="canvasLocation" x="1807" y="701"/>
         </scene>
         <!--Info-->
         <scene sceneID="axK-b3-Xrc">
@@ -1052,8 +1052,8 @@ Skate on the world's largest skating rink, the Rideau Canal Skateway. Check out 
                                     <rect key="frame" x="20" y="25" width="168" height="64"/>
                                 </variation>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoP-tE-Hzo" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
-                                <rect key="frame" x="522" y="25" width="43" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoP-tE-Hzo" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
+                                <rect key="frame" x="520" y="25" width="45" height="30"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" title=" Back ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
